# Auth-Catalog-Service

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
app/: dependecy.py  main.py  settings.py
app/cache/: __init__.py  accessor.py
app/database/: __init__.py  database.py  session.py
app/handlers/: __init__.py  category.py  ping.py  tasks.py
app/migration/: env.py
app/migration/versions/: 96221c1eff21_initial_table_category_and_product.py
app/models/: category.py  products.py
app/repository/: __init__.py  cache_category.py  category.py
app/schema/: __init__.py  category.py  task.py
app/service/: __init__.py  category.py
requirements/: codestyle.txt
