[project]
name = "pomodorotime"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi[all]>=0.115.14",
    "redis>=6.2.0",
    "ruff>=0.12.1",
    "sqlalchemy>=2.0.41",
]
